examples/test/testpolicy16051.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: policy16051
  namespace: namespace17
spec:
  podSelector:
    matchLabels:
      key8: value24
      key2: value25
      key31: value18
  policyTypes:
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          key49: value18
          key11: value22
      podSelector:
        matchLabels:
          key31: value39
          key29: value15
